<resources>
    <string-array name="browser_type_names">
        <item>"Automatic Selection (Recommended)"</item>
        <item>"Android WebView"</item>
        <item>"Crosswalk Project"</item>
    </string-array>
    <string-array name="browser_type_values">
        <item>"Auto"</item>
        <item>"Native"</item>
        <item>"Legacy"</item>
    </string-array>
    <string name="app_name">WallPanel</string>
    <string name="wallpanel_service_notification_title">WallPanel</string>
    <string name="wallpanel_service_notification_message">WallPanel Running…</string>
    <string name="title_settings">Settings</string>
    <string name="title_camera_settings">Camera Settings</string>
    <string name="title_mqtt_settings">MQTT Settings</string>
    <string name="title_http_settings">HTTP Settings</string>
    <string name="title_motion_settings">Motion Detection Settings</string>
    <string name="title_facedetection_settings">Face Detection Settings</string>
    <string name="title_qrcode_settings">QR Code Settings</string>
    <string name="title_activity_browser">Browser</string>
    <string name="title_setting_app_deviceid">Device ID</string>
    <string name="title_setting_app_preventsleep">Prevent Screen Sleep</string>
    <string name="title_setting_app_launchurl">Dashboard URL</string>
    <string name="title_setting_app_showactivity">Show Browser Activity</string>
    <string name="title_setting_camera_enabled">Camera Enabled</string>
    <string name="title_setting_camera_cameraid">Selected Camera</string>
    <string name="title_setting_camera_motionenabled">Motion Detection Enabled</string>
    <string name="title_setting_camera_processinginterval">Image Processing Interval (ms)</string>
    <string name="title_setting_camera_motionleniency">Maximum Leniency</string>
    <string name="title_setting_camera_motionminluma">Minimum Luma</string>
    <string name="title_setting_camera_motionwake">Wakes Screen</string>
    <string name="title_setting_camera_motionbright">Screen Brightness</string>
    <string name="title_setting_camera_motionontime">Screen Dim Delay (Seconds)</string>
    <string name="title_setting_camera_faceenabled">Face Detection Enabled</string>
    <string name="title_setting_camera_facewake">Wakes Screen</string>
    <string name="title_setting_camera_qrcodeenabled">QR Code Reader Enabled</string>
    <string name="title_setting_camera_streaming">Camera streaming</string>
    <string name="title_setting_http_restenabled">REST API</string>
    <string name="title_setting_http_port">HTTP Listening Port</string>
    <string name="title_setting_http_mjpegenabled">MJPEG Camera Streaming</string>
    <string name="title_setting_http_mjpegmaxstreams">MJPEG Camera Max Streams</string>
    <string name="title_setting_mqtt_enabled">Enabled MQTT Client</string>
    <string name="title_setting_mqtt_servername">MQTT Broker Address</string>
    <string name="title_setting_mqtt_serverport">Broker Port Number</string>
    <string name="title_setting_mqtt_basetopic">Base Topic</string>
    <string name="title_setting_mqtt_clientid">Client ID</string>
    <string name="title_setting_mqtt_username">Username (Optional)</string>
    <string name="title_setting_mqtt_password">Password (Optional)</string>
    <string name="title_setting_mqtt_sensorfrequency">Publish Frequency (in seconds)</string>
    <string name="title_setting_mqtt_discovery">Enable MQTT Discovery</string>
    <string name="title_setting_mqtt_home_assistant_topic">Discovery Base Topic</string>
    <string name="title_setting_mqtt_home_assistant_name">Device Display Name</string>
    <string name="default_setting_mqtt_home_assistant_name">My Wall Panel</string>
    <string name="title_setting_android_startonboot">Open On Device Boot</string>
    <string name="title_setting_android_browsertype">Specify Browser Engine</string>
    <string name="default_setting_android_browsertype">Auto</string>
    <string name="title_setting_test_zoomlevel">Browser Zoom Level</string>
    <string name="summary_setting_sensors_default">Not available</string>
    <string name="title_setting_sensors_temperature">Temperature</string>
    <string name="title_setting_sensors_light">Light</string>
    <string name="title_setting_sensors_magneticField">Magnetic Field</string>
    <string name="title_setting_sensors_pressure">Pressure</string>
    <string name="title_setting_sensors_humidity">Humidity</string>
    <string name="title_setting_ignore_ssl_errors">Ignore SSL Errors</string>
    <string name="text_seconds">%1$s seconds</string>
    <string name="title_camera_test">Camera Test</string>
    <string name="title_welcome_to_wallpanel">Welcome to WallPanel!</string>
    <string name="text_wallpanel_description">Configure the application to have a different \'Dashboard URL\' in the settings.\n\nThe dashboard can be any web page or home automation website. \n\nAfter you launch the dashboard, you may return to the settings by using the device back button.</string>
    <string name="button_launch_settings">Launch Settings</string>
    <string name="toast_camera_permission_granted">Camera permission granted.</string>
    <string name="toast_camera_permission_denied">Camera permission not granted.</string>
    <string name="dialog_write_permissions_title">Permissions Required</string>
    <string name="dialog_write_permissions_description">Do you want to grant permission to modify the system settings for screen brightness?</string>
    <string name="pref_title_screen_brightness">Screen Brightness</string>
    <string name="pref_description_screen_brightness">Give permission to the application to control the device\'s screen brightness. Update the device brightness, then click the button to save or update the value.</string>
    <string name="toast_write_permissions_denied">Write settings permission denied…</string>
    <string name="toast_write_permissions_granted">Write settings permission granted…</string>
    <string name="pref_http_settings_title">HTTP Settings</string>
    <string name="pref_motion_detection_title">Motion Detection</string>
    <string name="pref_motion_adjustments_title">Motion Adjustments</string>
    <string name="title_sensor_settings">Sensor Settings</string>
    <string name="title_enable_sensor_data">Enable Sensor Publishing</string>
    <string name="summary_enable_sensor_data">Publishes available device sensor data over MQTT</string>
    <string name="menu_title_help">Help</string>
    <string name="menu_title_dashboard">Dashboard</string>
    <string name="title_hardware_acceleration">Hardware Acceleration</string>
    <string name="summary_hardware_acceleration">Works on some devices to speed webpage and camera rendering.</string>
    <string name="mail_to_subject_text">WallPanel Feedback</string>
    <string name="mail_subject_text">Send Feedback:</string>
    <string name="thanks_mister_title">Thanks, Mister!</string>
    <string name="designer_developer_text">Design and development</string>
    <string name="company_url_text">thanksmister.com</string>
    <string name="company_email">mister@thanksmister.com</string>
    <string name="text_feedback">Feedback</string>
    <string name="text_rate_application">Rate application</string>
    <string name="text_reddit">Reddit group</string>
    <string name="text_license_information">License information</string>
    <string name="text_github_code">GitHub code</string>
    <string name="pref_about_title">About</string>
    <string name="pref_brightness_button">Capture Current Brightness Value</string>
    <string name="pref_sensor_list_summary">Below is a list of sensor data available on this device to be published as MQTT data.</string>
    <string name="pref_qr_code_summary">When active, will scan QR codes and publish the scanned code over MQTT.</string>
    <string name="pref_mqtt_settings_title">MQTT Settings</string>
    <string name="pref_motion_detection_summary">Detects motion using the device\'s camera.</string>
    <string name="pref_motion_wake_summary">Wakes the device screen when motion detected.</string>
    <string name="pref_camera_bright_summary">Increases the screen brightness when motion or face detected.</string>
    <string name="pref_motion_leniency_description">The maximum tolerance of the difference between images. A lower tolerance means motion is more sensitive (1 – 20).</string>
    <string name="pref_motion_luma_description">Minimum brightness level to detect motion. No motion will be detected if brightness falls below this value (1 – 1000).</string>
    <string name="pref_mjpeg_streaming_description">Use the device camera as a live MJPEG stream. Connect to the stream using the device IP address, HTTP Port, and end point: http://%s:2971/camera/stream</string>
    <string name="pref_mjpeg_streaming_title">MJPEG Streaming</string>
    <string name="pref_http_description">Control the application over HTTP using REST API calls. To find out which commands work with, review the help documentation.</string>
    <string name="pref_launchurl_summary">Enter the fully qualified URL for your home automation dashboard or path to file on the local device (requires storage access permission).</string>
    <string name="pref_show_browser_activity_summary">Display browser loading progress.</string>
    <string name="pref_prevent_sleep_summary">When active, keeps the screen on.</string>
    <string name="pref_start_boot_summary">Will start the application upon system boot.</string>
    <string name="pref_zoom_level_summary">Zooms the browser level (experimental).</string>
    <string name="pref_additional_settings_title">Additional Settings</string>
    <string name="pref_application_settings_title">Application Settings</string>
    <string name="pref_face_detection_title">Face Detection</string>
    <string name="pref_enable_face_detection_summary">Enables face detection.</string>
    <string name="pref_face_wake_summary">Turns on the screen when face detected.</string>
    <string name="pref_button_motion_detection">Motion Detection</string>
    <string name="pref_button_face_detection">Face Detection</string>
    <string name="pref_button_qrcode_reader">QR Code Reader</string>
    <string name="pref_button_camera_test">Test the camera settings.</string>
    <string name="toast_qr_code_read">QR Code Read....</string>
    <string name="pref_camera_motion_time_summary">Amount of time before the screen dims after brightness is set (requires value above 0).</string>
    <string name="pref_rest_api_title">REST API Settings</string>
    <string name="pref_camera_test_title">Camera Test</string>
    <string name="pref_camera_test_button_title">Camera Test</string>
    <string name="pref_camera_title">Camera</string>
    <string name="pref_camera_brightness_title">Camera Activated Brightness</string>
    <string name="pref_camera_streaming_title">Camera Streaming</string>
    <string name="toast_too_dark_motion">Too dark for motion detection</string>
    <string name="toast_motion_detected">Motion Detected!</string>
    <string name="toast_face_detected">Face Detected!</string>
    <string name="toast_qrcode_read">QR Code %1$s</string>
    <string name="preference_title_notifications">Notifications</string>
    <string name="preference_title_mqtt_notifications">MQTT Notifications</string>
    <string name="preference_summary_mqtt_notifications">Speak notifications from an MQTT message.</string>
    <string name="pref_mqtt_settings_category">TTS Notifications</string>
    <string name="preference_tts_voice">TTS Voice</string>
    <string name="preference_tts">TTS Notifications</string>
    <string name="preference_summary_tts">Use Text-To-Speech to speak the payload value of an MQTT message.</string>
    <string name="pref_ignore_ssl_errors_summary">Do not show a warning in case of a SSL error.</string>
</resources>