<!--
  ~ Copyright (c) 2019 ThanksMister LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License. 
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software distributed 
  ~ under the License is distributed on an "AS IS" BASIS, 
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. 
  ~ See the License for the specific language governing permissions and 
  ~ limitations under the License.
  -->
<ScrollView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:gravity="center_horizontal">
            
            <ImageView
                    android:layout_width="144dp"
                    android:layout_height="144dp"
                    android:src="@drawable/ic_mister"/>
            
            <androidx.legacy.widget.Space
                    android:layout_width="match_parent"
                    android:layout_height="16dp"/>
            
            <TextView
                    android:text="@string/designer_developer_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:ellipsize="marquee"
                    android:fadingEdge="horizontal"/>

            <TextView
                    android:text="@string/thanks_mister_title"
                    style="@style/TextAppearance.AppCompat.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:maxLines="2"/>

            <TextView
                    android:text="@string/company_url_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.AppCompat.Small"
                    android:maxLines="2"
                    android:paddingBottom="2dp"
                    android:autoLink="web|email"/>

            <TextView
                    android:id="@+id/versionName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                android:textSize="12sp"
                    style="@style/TextAppearance.AppCompat.Small"
                    android:maxLines="2"
                    tools:text="v1.2.4.5"/>

        </LinearLayout>

        <View style="@style/DividerHorizontal"/>

        <LinearLayout
                android:id="@+id/sendFeedbackButton"
                style="@style/BorderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:orientation="horizontal"
                android:visibility="visible">

            <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="8dp"
                    android:tint="@color/gray"
                    android:src="@drawable/ic_email_black"/>

            <TextView
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:gravity="left|center_vertical"
                    android:text="@string/text_feedback"/>

        </LinearLayout>

        <View style="@style/DividerHorizontal"/>

        <LinearLayout
                android:id="@+id/rateApplicationButton"
                style="@style/BorderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
            android:paddingLeft="24dp"
                android:orientation="horizontal">

            <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                android:layout_marginLeft="8dp"
                    android:tint="@color/gray"
                    android:src="@drawable/ic_star_black"/>

            <TextView
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:gravity="left|center_vertical"
                    android:text="@string/text_rate_application"/>

        </LinearLayout>

        <View style="@style/DividerHorizontal"/>

        <LinearLayout
            android:id="@+id/supportButton"
            style="@style/BorderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="8dp"
                android:tint="@color/gray"
                android:src="@drawable/ic_help_black"/>

            <TextView
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:gravity="left|center_vertical"
                android:text="@string/menu_title_help"/>

        </LinearLayout>


        <View style="@style/DividerHorizontal"/>

        <LinearLayout
                android:id="@+id/githubButton"
                style="@style/BorderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                android:layout_marginLeft="8dp"
                    android:tint="@color/gray"
                    android:src="@drawable/ic_github_blk"/>

            <TextView
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:gravity="left|center_vertical"
                    android:text="@string/text_github_code"/>

        </LinearLayout>

        <View style="@style/DividerHorizontal"/>

    </LinearLayout>

</ScrollView>